  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

KNOWN ISSUES:
  Corrupted color display on longer posts. XBMC bug as of Frodo 12.1
  
Current Version : 2.1.3

*** 2.1.4 ***

Added smileys to Generic keyboard and changed it's appearance

*** 2.1.3 ***

Added smilies to Confluence keyboard skin
Added missing smilies dialog (for site smilies) for the light/dark skins 

*** 2.1.2 ***

Added a detail display on the image slide out on the full message view of the Video skin
Made the links slide out on the full message view taller on the Video skin
Fixed the numbers for post images for counts over 20 when the skin mods are enabled
Modified font to include more circled numbers for the post image representations
Added 'Video' keyboard (fits under video when playing) with smilies
Tapatalk: Added ability to use forum specific smilies when available
Added settings option 'Change Keyboard' which allows you to change which keyboard is installed without manually uninstalling and reinstalling
Enabling or changing skin mods no longer requires a Forum Browser restart
Fixed a bug where service was checking removed forums
Progress no longer pops up twice when opening a forum (most noticable on the Video skin)
Added the ability to re-arrange favorite forums
Fixed a bug causing skin mods not to update when a pre-installed skin is updated to a new version
Fixed a bug preventing forum logos from being selected in logo dialog
Improved forum detection when user 'Add Forum' for Tapatalk and Forumrunner

*** 2.1.1 ***

ParserBrowser: Added context menu option to Posts view: 'View Thread In WebViewer' useful if no posts show, or whatever
Can now change themes without restarting forum browser
Fixed a bug preventing the display of the context menu on the online users display